gccida/g1/ix86_split_long_move
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9188:4: error: expected ';' after expression
rtx v11; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9188:5: error: use of undeclared identifier 'v11'
rtx v11; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9199:4: error: expected ';' after expression
rtx v22; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9199:5: error: use of undeclared identifier 'v22'
rtx v22; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9200:4: error: expected ';' after expression
rtx part[2][3]; // [rsp+0h] [rbp-68h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9200:5: error: use of undeclared identifier 'part'
rtx part[2][3]; // [rsp+0h] [rbp-68h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9209:51: error: use of undeclared identifier 'machine_mode'
v5 = ix86_split_to_parts( operands[1], part[1], ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9209:40: error: use of undeclared identifier 'part'
v5 = ix86_split_to_parts( operands[1], part[1], ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9210:44: error: use of undeclared identifier 'machine_mode'
ix86_split_to_parts( *operands, part[0], ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9210:33: error: use of undeclared identifier 'part'
ix86_split_to_parts( *operands, part[0], ( machine_mode)*( ( unsigned __int8 *)*operands + 2)); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9211:1: error: use of undeclared identifier 'v22'
v22 = operands[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9212:17: error: use of undeclared identifier 'v22'
if ( *( _WORD *)v22 == 66 && reg_overlap_mentioned_p( global_rtl[2], v22) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9212:70: error: use of undeclared identifier 'v22'
if ( *( _WORD *)v22 == 66 && reg_overlap_mentioned_p( global_rtl[2], v22) ) 
                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9215:1: error: use of undeclared identifier 'part'
part[1][1] = change_address( 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9217:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)part[1][1] + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9217:39: error: use of undeclared identifier 'part'
( machine_mode)*( ( unsigned __int8 *)part[1][1] + 2), 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9216:1: error: use of undeclared identifier 'part'
part[1][1], 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9218:1: error: use of undeclared identifier 'part'
part[1][2]->fld[0].rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/i386.c:9219:1: error: use of undeclared identifier 'part'
part[1][0] = change_address( 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_long_move/src/obj/i386.o] Error 1
